[package]
name = "send_ctrl_event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
argh = "0.1.10"
dll-syringe = "0.15.0"
ctor = "0.1.26"

[dependencies.windows]
version = "0.44.0"
features = ["Win32_System_Console", "Win32_System_Threading", "Win32_Security", "Win32_Foundation"]


[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
panic = "abort"
strip = true